Fix heading background image clipping

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -11,7 +11,7 @@ header {
     text-align: center;
 
     h1 {
-        margin-bottom: 0.4em;
+        margin-bottom: 0.2em;
     }
 
     p {
